--- a/9-Advance Python Concepts/9.-Generators.ipynb
+++ b/9-Advance Python Concepts/9.-Generators.ipynb
@@ -208,15 +208,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Practical Example: Reading Large Files\n"
+    "### Practical Example: Reading Large Files\n",
+    "Generators are particularly useful for reading large files because they allow you to process one line at a time without loading the entire file into memory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def read_large_file(file_path):\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        for line in file:\n",
+    "            yield line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For a list of presidents, see List of presidents of India.\n",
+      "President of India\n",
+      "\n",
+      "Incumbent\n",
+      "Droupadi Murmu\n",
+      "since 25 July 2022\n",
+      "Head of state of the Republic of India\n",
+      "Executive branch of the Indian Government\n",
+      "\n",
+      "The president of India  is the head of state of the Republic of India. The president is the nominal head of the executive,[a] the first citizen of the country, as well as the supreme commander of the Indian Armed Forces. Droupadi Murmu is the 15th and current president, having taken office from 25 July 2022.\n",
+      "\n",
+      "The office of president was created when India became a republic on 26 January 1950 when its constitution came into force. The president is indirectly elected by an electoral college comprising both houses of the Parliament of India and the legislative assemblies of each of India's states and territories, who themselves are all directly elected by the citizens.\n",
+      "\n",
+      "Article 53 of the Constitution of India states that the president can exercise their powers directly or by subordinate authority, though all of the executive powers vested in the president are, in practice, exercised by the prime minister heading the Council of Ministers.[3] The president is bound by the constitution to act on the advice of the council and to enforce the decrees passed by the Supreme Court under article 142.\n",
+      "\n",
+      "Origin\n",
+      "India achieved independence from the British on 15 August 1947, initially as a dominion within the Commonwealth of Nations with George VI as king, represented in the country by a governor-general.[4] Following independence, the Constituent Assembly of India, under the leadership of B. R. Ambedkar, undertook the process of drafting a completely new constitution for the country. The Constitution of India was eventually enacted on 26 November 1949 and came into force on 26 January 1950,[5]:â€Š26â€Š making India a republic.[6]:â€Š9â€Š The offices of monarch and governor-general were replaced by the new office of President of India, with Rajendra Prasad as its first incumbent.[6]:â€Š1â€Š India retained its Commonwealth membership per the London Declaration, recognising The King as \"the symbol of the free association of its independent member nations and as such the Head of the Commonwealth.\"[7]\n",
+      "\n",
+      "The Indian constitution accords to the president the responsibility and authority to defend and protect the Constitution of India and its rule of law.[8] Invariably, any action taken by the executive or legislature entities of the constitution shall become law only after the president's assent. The president shall not accept any actions of the executive or legislature which are unconstitutional. The president is the foremost, most empowered and prompt defender of the constitution (Article 60), who has pre-emptive power for ensuring constitutionality in the actions of the executive or legislature. The role of the judiciary in upholding the Constitution of India is the second line of defence in nullifying any unconstitutional actions of the executive and legislative entities of the Indian Union.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = 'large_file.txt'\n",
+    "\n",
+    "for line in read_large_file(file_path):\n",
+    "    print(line.strip())"
+   ]
   }
  ],
  "metadata": {
