--- a/11-Working With Databases/11.1-sqlite.ipynb
+++ b/11-Working With Databases/11.1-sqlite.ipynb
@@ -26,7 +26,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Connection at 0x1b746dfb2e0>"
+       "<sqlite3.Connection at 0x1d2388ca890>"
       ]
      },
      "execution_count": 2,
@@ -77,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x1b746faed40>"
+       "<sqlite3.Cursor at 0x1d238afd740>"
       ]
      },
      "execution_count": 5,
@@ -93,31 +93,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Insert the data in sqlite table\n",
+    "cursor.execute('''\n",
+    "Insert into employees(name, age, department)\n",
+    "               values('Prasanna', 23, 'Data Science'),\n",
+    "               ('Pranathi', 21, 'Artificial Intelligence'),\n",
+    "               ('Prasanth', 22, 'Management'),\n",
+    "               ('Shiva', 24, 'Information Science')\n",
+    "''')\n",
+    "# commit the changes\n",
+    "connection.commit()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Prasanna', 23, 'Data Science')\n",
+      "(2, 'Pranathi', 21, 'Artificial Intelligence')\n",
+      "(3, 'Prasanth', 22, 'Management')\n",
+      "(4, 'Shiva', 23, 'Information Science')\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Query the data from the table\n",
+    "cursor.execute('''\n",
+    "Select * from employees\n",
+    "''')\n",
+    "rows = cursor.fetchall()\n",
+    "\n",
+    "# Print the query data\n",
+    "for row in rows:\n",
+    "    print(row)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x1d238afd740>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Update the data in the table\n",
+    "cursor.execute('''\n",
+    "UPDATE employees\n",
+    "set age=23\n",
+    "where name='Shiva'\n",
+    "''')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## def - Query the data from the table\n",
+    "def select():\n",
+    "    cursor.execute('''\n",
+    "    Select * from employees\n",
+    "    ''')\n",
+    "    rows = cursor.fetchall()\n",
+    "\n",
+    "    # Print the query data\n",
+    "    for row in rows:\n",
+    "        print(row)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Prasanna', 23, 'Data Science')\n",
+      "(3, 'Prasanth', 22, 'Management')\n",
+      "(4, 'Shiva', 23, 'Information Science')\n"
+     ]
+    }
+   ],
+   "source": [
+    "select()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## delete the data from the table\n",
+    "cursor.execute('''\n",
+    "Delete from employees\n",
+    "Where name = \"Pranathi\"''')\n",
+    "\n",
+    "connection.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Prasanna', 23, 'Data Science')\n",
+      "(3, 'Prasanth', 22, 'Management')\n",
+      "(4, 'Shiva', 23, 'Information Science')\n"
+     ]
+    }
+   ],
+   "source": [
+    "select()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Working with Sales Data\n",
+    "\n",
+    "# Connecting to an SQLite database\n",
+    "connection = sqlite3.connect('sales_data.db')\n",
+    "cursor = connection.cursor()\n",
+    "\n",
+    "# Create a table for sales data\n",
+    "cursor.execute('''\n",
+    "CREATE TABLE IF NOT EXISTS sales(\n",
+    "               id INTEGER PRIMARY KEY,\n",
+    "               date TEXT NOT NULL,\n",
+    "               product TEXT NOT NULL,\n",
+    "               sales INTEGER,\n",
+    "               region TEXT)\n",
+    "''')\n",
+    "\n",
+    "# data\n",
+    "sales_date = [\n",
+    "    ('2025-01-01', 'Product1', 100, 'North'),\n",
+    "    ('2025-01-02', 'Product2', 200, 'South'),\n",
+    "    ('2025-01-03', 'Product3', 200, 'East'),\n",
+    "    ('2025-01-04', 'Product4', 150, 'North'),\n",
+    "    ('2025-01-05', 'Product5', 300, 'West'),\n",
+    "    ('2025-01-07', 'Product6', 350, 'South')\n",
+    "]\n",
+    "# Inserting data into sales table\n",
+    "cursor.executemany('''\n",
+    "INSERT INTO sales(date, product, sales, region)\n",
+    "values(?, ?, ?, ?)\n",
+    "''', sales_date)\n",
+    "\n",
+    "connection.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ProgrammingError",
+     "evalue": "Cannot operate on a closed database.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mProgrammingError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[19], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'''\u001b[39;49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;124;43mSELECT * FROM sales\u001b[39;49m\u001b[38;5;124;43m'''\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m rows \u001b[38;5;241m=\u001b[39m cursor\u001b[38;5;241m.\u001b[39mfetchall()\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m rows:\n",
+      "\u001b[1;31mProgrammingError\u001b[0m: Cannot operate on a closed database."
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute('''\n",
+    "SELECT * FROM sales''')\n",
+    "\n",
+    "rows = cursor.fetchall()\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Close the connection\n",
+    "connection.close()"
+   ]
   }
  ],
  "metadata": {
