--- a/15-Memory Management/memory_manage.ipynb
+++ b/15-Memory Management/memory_manage.ipynb
@@ -227,11 +227,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Generators for memory efficiency\n",
+    "# Generators allow you to produce items one at a time, using memory efficiently by only keeping one\n",
+    "\n",
+    "def generate_numbers(n):\n",
+    "    for i in range(n):\n",
+    "        yield i\n",
+    "\n",
+    "## using the generator\n",
+    "for num in generate_numbers(100000):\n",
+    "    print(num)\n",
+    "    if num>10:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Generators for memory efficiency\n"
+    "## Profiling Memory usage with tarcemalloc\n",
+    "import tracemalloc\n",
+    "def create_list():\n",
+    "    return [i for i in range(10000)]\n",
+    "\n",
+    "def main():"
    ]
   }
  ],
